[package]
name    = "acrostic-cw"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ascii      = "1.0"
daggy      = "0.7"
radix_trie = "0.2"
fst        = "0.4"
ustr       = "0.8"
vec_map    = "0.8"
rand       = "0.8"
wildmatch  = "2.1"
enumset    = "1.0"
fastrand   = "1.5"
nanorand   = "0.6"
env_logger = "0.9"
log = "0.4"
tinyset = "0.4"