[package]
name    = "acrostic-cw"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fst         = "0.4"
ustr        = "0.9"
vec_map     = "0.8"
rand        = "0.8"
nanorand    = "0.7"
tinyset     = "0.4"
parking_lot = "0.12"
byte_set    = "0.1"
rayon = "1.7.0"
atomic_bitfield = "0.1.0"

[profile.release]
debug = true
